@@ -1,3 +1,7 @@
+2007-08-26  Badlop  <badlop@ono.com>
+
+	* src/mod_presence.erl: Preliminary support for hashed JIDs. 
+
 2007-08-25  Badlop  <badlop@ono.com>
 
 	* src/mod_presence.erl: Fixed compilation warnings. Fixed two warnings reported by Dialyzer. Renamed Status and Text to Show and Status. Table index key only needs User and Server. Added id table field and update_table function. XML option is stored as atom instead of string. Cleaned process/2 and show_presence/1. New home page, and icon themes quickview.
